Fixed the bug on Take a test Activity, Added a Thread demo on History activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="take">Take a Test</string>
     <string name="history">History</string>
-    <string name="study">Studty</string>
+    <string name="study">Study</string>
     <string name="home_title">Java Practice</string>
     <string name="title_activity_take_atest">Take A Test</string>
     <string name="title_activity_history_activty">History</string>
